--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,7 @@
         <title>Lists</title>
     </head>
     <body>
+        Welcome to my webste!
         An Unordered List:
         <ul>
             <li>UN One</li>
@@ -14,6 +15,6 @@
             <li>First</li>
             <li>Second</li>
             <li>Third</li>
-        </ol>
+lcome to my website:        </ol>
     </body>
 </html>
