--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,8 @@
         <title>Lists</title>
     </head>
     <body>
-        Welcome to my webste!
+        <h1 Welcome to my webste!>
+        <h2 New Heading>
         An Unordered List:
         <ul>
             <li>UN One</li>
