--- a/hello.html
+++ b/hello.html
@@ -4,8 +4,8 @@
         <title>Lists</title>
     </head>
     <body>
-        <h1 Welcome to my webste!>
-        <h2 New Heading>
+        <h1>Welcome to my webste!</h1>
+        <h2>New Heading</h2>
         An Unordered List:
         <ul>
             <li>UN One</li>
